user/cmd/user/k8s/02-user-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: user-server
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-server
  template:
    metadata:
      labels:
        app: user-server
    spec:
      containers:
        - name: user-server
          # image: bright/user-server:latest
          image: docker.io/bright/user-server:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/UserServer
      volumes:
        - name: service-config
          configMap:
            name: user-server-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: user-server
spec:
  ports:
    - name: http
      port: 30150
      targetPort: 30150
    - name: grpc
      port: 30151
      targetPort: 30151
    - name: healthz
      port: 30152
      targetPort: 30152
  selector:
    app: user-server
