user/cmd/user/k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-system
  name: user-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-user-prefix@kubernetescrd,
      kube-system-head-cors@kubernetescrd

spec:
  rules:
    - host:
      http:
        paths:
          - path: /api/user/
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 30150
